maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:69: error: ';' expected but 'else' found.
  }else{
   ^